docs_and_tests sonarlint part1